src/objects/ObectBuilder__c.object
<CustomObject>
    <fields>
        <fullName>Api_Name__c</fullName>
        <label>Api Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCustom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Used_Date__c</fullName>
        <label>Last Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ObectBuilder</label>
    <nameField>
        <displayFormat>OBJ-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ObectBuilders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>